Added SSE To the server
